<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="app_banner">IMAGINE YOUR FUTURE</string>
    <string name="app_address">2465 Latham Street</string>
    <string name="app_address_city_state">2465 Latham Street  |  St Mountain View, CA 94043</string>
    <string name="app_city_state">St Mountain View, CA 94043</string>
    <string name="app_phone">(650) 555-5555</string>
    <string name="app_phone_web">(650) 555-5555  |  www.udacity.com</string>
    <string name="app_web">www.udacity.com</string>
    <string name="app_title">UDACITY</string>
</resources>
